<resources>
    <string name="app_name">Material2</string>
    <string name="options">Options</string>
    <string name="hello">Hello world</string>
    <string name="default_name">John Doe</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="married">Married</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_item">Add item</string>
    <string name="user_data">User data</string>
    <string name="overview">List overview</string>
    <string name="dummy1">Dummy 1</string>
    <string name="dummy2">Dummy 2</string>
    <string name="dummy3">Dummy 3</string>
</resources>
