<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_user"
        android:icon="@drawable/ic_person"
        android:title="@string/user_data" />
    <item
        android:id="@+id/action_list"
        android:icon="@drawable/ic_view_list"
        android:title="@string/overview" />
    <item
        android:id="@+id/action_dummy1"
        android:icon="@drawable/ic_commute"
        android:title="@string/dummy1" />
    <item
        android:id="@+id/action_dummy2"
        android:icon="@drawable/ic_favorite"
        android:title="@string/dummy2" />
    <item
        android:id="@+id/action_dummy3"
        android:icon="@drawable/ic_schedule"
        android:title="@string/dummy3" />
</menu>